[package]
name = "papmet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.17"
sha2 = "0.9.8"

# This tells Rust to compile both lib.rs and main.rs
[[bin]]
name = "papmet"
path = "src/main.rs"

[lib]
name = "papmet"
path = "src/lib.rs"
